Position , Inbound , Packing List functions you can select

--- a/WebPage/src/app/pages/company-156-print/company-156-print.component.html
+++ b/WebPage/src/app/pages/company-156-print/company-156-print.component.html
@@ -2,7 +2,7 @@
   <div class="topbar">
     <button type="button" class="exit" [routerLink]="['/']">Esci</button>
   </div>
-  <h2>Packing List</h2>
+  <h2>Inbound</h2>
 
   <label for="ean">EAN</label>
   <input id="ean" [(ngModel)]="ean" (keyup.enter)="print()" placeholder="Inserisci EAN" autocomplete="off" />
