fixed stampa button

--- a/WebPage/src/app/pages/company-101-articles/company-101-articles.component.html
+++ b/WebPage/src/app/pages/company-101-articles/company-101-articles.component.html
@@ -18,6 +18,7 @@
          id="ean"
          [(ngModel)]="ean"
          (keyup.enter)="validate()"
+         (change)="validate()"
          placeholder="Scansiona/Inserisci EAN"
          autocomplete="off" />
   
