Add field postazione on benetton's item label

--- a/WebPage/src/app/pages/company-101-articles/company-101-articles.component.html
+++ b/WebPage/src/app/pages/company-101-articles/company-101-articles.component.html
@@ -2,6 +2,16 @@
   <a class="exit" [routerLink]="['/']">Esci</a>
   <h2>{{ title }}</h2>
 
+  <label for="place">Postazione</label>
+  <input id="place"
+         #qrInput
+         [(ngModel)]="place"
+         type="text"
+         (keyup.enter)="goToQr()"
+         autocomplete="off" autocapitalize="off" autocorrect="off"
+         spellcheck="false" inputmode="text"
+         placeholder="Inserisci la postazione" />
+
   <label for="qr">QR</label>
   <input id="qr"
          #qrInput
@@ -21,7 +31,7 @@
          (change)="validate()"
          placeholder="Scansiona/Inserisci EAN"
          autocomplete="off" />
-  
+
   <button class="secondary" type="button" (click)="clearFields()" [disabled]="busy">
     Pulisci campi
   </button>
